# VINS-Fusion-ROS2

./: README.md  realsense_install.sh
camera_models/: CMakeLists.txt  package.xml
camera_models/src/calib/: CameraCalibration.cc
camera_models/src/chessboard/: Chessboard.cc
config/: vins_rviz_config.rviz
config/euroc/: euroc.yaml  euroc_stereo_imu_config.yaml
config/realsense_d435i/: realsense_stereo_imu_config.yaml  right.yaml
config_pkg/: CMakeLists.txt  package.xml
config_pkg/config/: ar_demo_rviz.rviz  vins_euroc_rviz.rviz  vins_rviz_config.rviz
config_pkg/config/euroc/: euroc_config.yaml
global_fusion/: CMakeLists.txt  package.xml
global_fusion/src/: globalOpt.cpp  globalOpt.h  globalOptNode.cpp
lightglue_feature_tracker/: package.xml  setup.cfg  setup.py
lightglue_feature_tracker/config/: LightGlueRViz2.rviz  euroc.yaml
lightglue_feature_tracker/launch/: feature_tracker.launch.py
lightglue_feature_tracker/lightglue_feature_tracker/: datastructure_exemple.txt  feature_tracker_node.py  feature_tracker_node2.py  feature_tracker_node3.py  feature_tracker_node4.py  feature_tracker_node5.py
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
vins/: CMakeLists.txt  package.xml
vins/launch/: vins_rviz.launch.xml
vins/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins/src/factor/: imu_factor.h  marginalization_factor.cpp  projectionTwoFrameOneCamFactor.h  projection_factor.h
vins/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.h  initial_sfm.h  solve_5pts.h
vins/src/utility/: visualization.cpp  visualization.h
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: euroc.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp
vins_estimator/src/estimator/: estimator.h  parameters.cpp
vins_estimator/src/factor/: initial_bias_factor.h  initial_pose_factor.h  marginalization_factor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameTwoCamFactor.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp
